finish favorite api
