# cmd/api/handlers/feed.go
@@ -13,16 +13,17 @@ import (
 
 // GetFeed retrieves a feed based on the latest time and user token.
 //
-// @Summary      Retrieve feed
-// @Description  This endpoint allows users to fetch feed data using the latest timestamp and an optional authentication token.
-// @Tags         feed
-// @Accept       json
-// @Produce      json
-// @Param        latest_time  query     int64                                  false  "The timestamp for the latest feed item (optional). Defaults to now if not provided."
-// @Success      200          {object}  feed.BloomblogFeedResponse             "Successful operation, returns the feed data."
-// @Failure      400          {object}  feed.BloomblogFeedResponse           "Invalid input data, such as malformed timestamp."
-// @Failure      500          {object}  feed.BloomblogFeedResponse           "Internal server error."
-// @Router       /bloomblog/feed/getfeed [get]
+//	@Summary		Retrieve feed
+//	@Description	This endpoint allows users to fetch feed data using the latest timestamp and an optional authentication token.
+//	@Tags			feed
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			latest_time	query		int64						false	"The timestamp for the latest feed item (optional). Defaults to now if not provided."
+//	@Success		200			{object}	feed.BloomblogFeedResponse	"Successful operation, returns the feed data."
+//	@Failure		400			{object}	feed.BloomblogFeedResponse	"Invalid input data, such as malformed timestamp."
+//	@Failure		500			{object}	feed.BloomblogFeedResponse	"Internal server error."
+//	@Router			/bloomblog/feed/getfeed [get]
 func GetFeed(c context.Context, ctx *app.RequestContext) {
 	var feedVar FeedParam
 	latest_time := ctx.Query("latest_time")
